--- a/src/components/charity/charity.sass
+++ b/src/components/charity/charity.sass
@@ -1,9 +1,11 @@
 .charity
+    position: relative
     grid-area: charity
     background-color: $main-comp-background-color
     border-radius: $main-comp-border-radius
     padding: $main-comp-padding
     text-align: center
+    min-height: 50px
 
     .header
         overflow: hidden
