--- a/src/components/donations/donations.sass
+++ b/src/components/donations/donations.sass
@@ -2,7 +2,9 @@
 @import "../styles/bordersAndPaddings"
 
 .donations 
+    position: relative
     grid-area: donations
     background-color: $main-comp-background-color
     border-radius: $main-comp-border-radius
     padding: $main-comp-padding
+    min-height: 50px;
