--- a/src/index.sass
+++ b/src/index.sass
@@ -5,3 +5,4 @@
 @import "./components/charity/charity"
 @import "./components/donations/donations"
 @import "./components/donations/donation/donation"
+@import "./components/spinner/spinner"
