--- a/src/styles/_colors.sass
+++ b/src/styles/_colors.sass
@@ -2,4 +2,5 @@ $main-background-color: #e9ebee
 $main-comp-background-color: #ffffff
 $main-border-color: #cccccc
 $main-title-color: #47494c
+$main-button-color: #007bff
 $main-content-color: #8d9196
